  - Update Account CachedBalances when we're get the account holding balance.
  - Bump language file to 0.132.
0.97.2.16: 
  - Bump language file to 0.133.
  - Made invites/confirmation messages translate to player locales in more places.
  - API: Made Confirmations able to take on a custom plugin prefix, so that it can be used to run non-Towny commands.
  - API: Add events for when a town/nation spawn is set, courtesy of Warriorrrr with PR #5432.
  - Fix typo in /n set capital node, courtesy of Warriorrrr with PR #5435.
  - API: Add a TownBlock getter to PlotToggle events, courtesy of Warriorrrr with PR #5434.
0.97.2.17:
  - API: add TownyAPI#getTownBlock(Player).
  - New Config Option: global_town_settings.keep_inventory_on_death_in_arena
    - Default: false
    - If People should keep their inventories on death in an arena townblock. Is not guaranteed to work with other keep inventory plugins!
  - Make deprecated isWarTime() non-static.
  - New language: Bulgarian.
0.97.2.18:
  - Fix automatic tag setting picking up -'s and _'s.
  - Add new API to CombatUtil, courtesy of galacticwarrior9 with PR #5446. (First-Time Contributor!)
    - CombatUtil#isAlly(Resident, Resident)
    - CombatUtil#isEnemy(Resident, Resident)
  - Fix a nation removing an ally, and that causing the ally to remove the nation as an ally not throwing a NationRemoveAllyEvent.
  - Fix NationRemoveAllyEvent constructor.
  - Parse baltops asynchronously, courtesy of Gamer153 with PR #5444. (First-Time Contributor!)
  - Fix baltops not using cached balances.
  - API: Add new PlotChangeOwnerEvents, courtesy of Warriorrr and LlmDl with PR #5418.
    - PlotPreClaimEvent 
    - PlotClaimEvent
    - PlotPreUnclaimEvent
    - PlotUnclaimEvent
  - Bump language file to 0.134. 
  - Fix exception when running /plot claim, courtesy of Warriorrrr with PR #5448.
0.97.2.19:
  - Fix Entity Listener paying attention to cancelled events, closes #5449.
  - Fix /n tabcompleter missing "invite".